--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -1,9 +1,9 @@
 <div class="card card-body mb-3">
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <input name="text" [(ngModel)]="log.text" type="text" class="form-control" placeholder="Add log here ...">
+      <input name="text" [(ngModel)]="text" type="text" class="form-control" placeholder="Add log here ...">
     </div>
-    <input type="submit" value="Add Log" class="btn btn-light" [disabled]=!log.text>
-    <button type="button" class="btn btn-warning ml-3" [hidden]=!log.text>Clear</button>
+    <input type="submit" value="Add Log" class="btn btn-light" [disabled]=!text>
+    <button (click)="onClear()" type="button" class="btn btn-warning ml-3" [hidden]=!text>Clear</button>
   </form>
 </div>
